--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,12 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - pbudzyns
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - sphinx-doc/sphinx
+  - influxdata/docs-v2
+  - pbudzyns/ad_toolkit
+  - pbudzyns/singal-processing
+  - pbudzyns/age-estimation
+  - pbudzyns/generative-models
+  - pbudzyns/lstm-language-model
+  - pbudzyns/stocks-correlations
